2004-05-28 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c (pic16emitStaticSeg): do not print as publics or
	externs configuration variables,
	* src/pic16/ralloc.h,
	* src/pic16/ralloc.cc: IS_CONFIG_ADDRESS is made public and added
	prototype in header, commented out some debug messages

2004-05-26 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/glue.c,
	* src/pic16/main.c,
	* src/pic16/pcode.c: added gpasm directives #FILE/#LINE
	for gpasm COFF object generation. Thanks to D. Hawkins for
	his patch info

2004-05-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/main.c,
	* src/mcs51/main.c: fixed sort order of mnemonics (thanks to Maarten
	Brock for spotting this)
	* src/ds390/gen.c (genEndFunction),
	* src/mcs51/gen.c (genEndFunction): always save psw if function is an
	interrupt handler and critical. Disable push/pop optimizations when
	peephole optimizations disabled.

2004-05-25 Vangelis Rokas <vrokas AT otenet.gr>

	Updated pic16 library sources and headers.
	* device/lib/pic16/pic18f*/ ,
	* device/include/pic16/*.h: modified to handle structured SFR
	definitions

2004-05-25 Vangelis Rokas <vrokas AT otenet.gr>

	* src/port.h (PORT structure): added hook initPaths, now each
	port can declare its own default search paths,
	which can been seen with the --print-search-dirs option,
	see pic16 port for example,
	* src/SDCCmain.c (setBinPaths, setIncludePaths, setLibPath,
	setDataPaths): test to options.printSearchDirs is ifdef'ed out,
	* (doPrintSearchDirs): NEW, replaces in a central manner the
	printing of search dirs which was split in set*Paths functions,
	* (main): added call to port->initPaths and doPrintSearchDirs,
	* src/avr/main.c,
	* src/ds390/main.c,
	* src/hc08/main.c,
	* src/izt/i186.c,
	* src/izt/tlcs900h.c,
	* src/mcs51/main.c,
	* src/pic/main.c,
	* src/pic16/main.c: modified port structures to reflect addition of
	initPaths hook,
		
	* src/pic16/device.c (regCompare): registers are finally sorted by name,